[gd_scene load_steps=5 format=3 uid="uid://b55fys6l57t7c"]

[ext_resource type="Script" path="res://Scenes/menu.gd" id="1_6vwib"]
[ext_resource type="Texture2D" uid="uid://bb46uvh78p6q0" path="res://assets/Textures/background.jpg" id="1_51fst"]

[sub_resource type="SystemFont" id="SystemFont_56e8b"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_p1ae4"]
font_names = PackedStringArray("Impact")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vwib")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_51fst")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.134629, 0.659003, 0.94046, 1)
theme_override_constants/line_spacing = 6
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_56e8b")
theme_override_font_sizes/font_size = 64
text = "Run Escape"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_p1ae4")
theme_override_font_sizes/font_size = 24
text = "Play Game
"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_p1ae4")
theme_override_font_sizes/font_size = 24
text = "Quit to Desktop"

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
